2006-06-26  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (EXTRA_DIST): Add config.rpath, mkinstalldirs, m4/ChangeLog.

2006-06-22 Marco Antonio Islas <markuz@islascruz.org>
	* christine: Import to queue ready!!
	* gui/main_window.glade: handler to import to queue menu item
	* lib_christine/libs_christine: Video player is now available again!!
2006-06-09 Marco Antonio Islas <markuz@islascruz.org>
	* christine: Search and browse bugfix,
	Bugfix in control radiobuttons
	* gui/properties.glade: labels renamed, added video-codec label
	* lib_christine/show_properties.py: class finished
	* gui/popupmenu.glade: added properties item
2006-06-07 Marco Antonio Islas <markuz@islascruz.org>
	* lib_christine/library.py: Queue reordering is enable
2006-06-04 Marco Antonio Islas <markuz@islascruz.org>
	* Christine: Filtering options are improved to work with minilists
				- Filtering bugfix
				- Browser show/hide gconfized
	* lib_chrsitine/library.py: Minilist filering stuff
2006-06-02 Marco Antonio Islas <markuz@islascruz.org>
	* Christine: On jump_to function, now pressing Enter on any
	spin button will cause an OK press button signal
2006-05-19 Marco Antonio Islas <markuz@islascruz.org>
	* ChangeLog: Created ChangeLog