@@ -25,6 +25,7 @@ from lib_christine.gtk_misc import *
 from lib_christine.library import *
 from lib_christine.preferences import *
 from lib_christine.show_properties import *
+from lib_christine.about import *
 
 
 (CONTROL_SHUFFLE,
@@ -961,10 +962,8 @@ class christine(gtk_misc):
 #===============player section ends ===========
 	
 	def show_about(self,widget):
-		xml = glade_xml("about.glade")
-		about = xml["about"]
-		pix = self.gen_pixbuf("logo.png")
-		about.set_logo(pix)
+		about()
+			
 	def show_preferences(self,widget):
 		preferences()
 	
