@@ -32,7 +32,7 @@ AC_SUBST(VERSION)
 
 GETTEXT_PACKAGE=christine
 AC_SUBST(GETTEXT_PACKAGE)
-ALL_LINGUAS="es es_ES es_MX"
+ALL_LINGUAS="es_ES"
 AC_SUBST(ALL_LINGUAS)
 USE_NLS=yes
 AC_SUBST(USE_NLS)
